tests/src/frontend/typechecking/invalid/tunder_5.sk
fun foo(x: _): _ {
  x
}

fun bar(f: Int -> _): _ {
  f(42)
}

fun baz(): _ {
  bar(foo)
}
